project(helloWorld C)

cmake_minimum_required(VERSION 3.0)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")

file(
	GLOB_RECURSE
	SOURCE_FILES
	helloworld.c
)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

install(TARGETS ${PROJECT_NAME}
	RUNTIME DESTINATION bin
	)

#packaging informations
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "hello world sample program")
SET(CPACK_PACKAGE_VENDOR "Guillaume Scigala")
SET(CPACK_PACKAGE_CONTACT "guillaume@scigala.fr")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_SET_DESTDIR ON)
SET(CPACK_MONOLITHIC_INSTALL ON)

if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
  SET(CPACK_DEBIAN_ARCHITECTURE amd64)
elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
  SET(CPACK_DEBIAN_ARCHITECTURE i386)
endif()

include(CPack)
